--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "Shashank Mestry",
   "license": "ISC",
   "dependencies": {
+    "@floating-ui/dom": "^1.0.7",
+    "@floating-ui/react-dom": "^1.0.1",
+    "@tippyjs/react": "^4.2.6",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
@@ -23,6 +26,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "mysql": "^2.18.1",
+    "react": "^18.2.0",
+    "react-tooltip": "^4.5.1",
     "tar": "^6.1.11"
   },
   "devDependencies": {
