--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "proxy": "http://localhost:5000/",
   "private": true,
   "dependencies": {
+    "@ant-design/charts": "^1.4.2",
+    "@ant-design/plots": "^1.2.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
