--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
+    "ethers": "^5.7.2",
     "number-format.js": "^2.0.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
