--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-tooltip": "^4.5.1",
-    "tar": "^6.1.11"
+    "tar": "^6.1.11",
+    "web3": "^1.8.2"
   },
   "devDependencies": {
     "concurrently": "^7.1.0",
