--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react": "^18.2.0",
     "react-tooltip": "^4.5.1",
     "tar": "^6.1.11",
+    "twit": "^2.2.11",
+    "twitter-api-v2": "^1.14.1",
     "web3": "^1.8.2"
   },
   "devDependencies": {
