--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
     "@ant-design/plots": "^1.2.3",
+    "@emotion/react": "^11.10.6",
     "@reduxjs/toolkit": "^1.9.3",
+    "@table-library/react-table-library": "^4.0.28",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
