--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@ant-design/charts": "^1.4.2",
     "@ant-design/plots": "^1.2.3",
     "@emotion/react": "^11.10.6",
+    "@headlessui/react": "^2.1.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@table-library/react-table-library": "^4.0.28",
     "@testing-library/jest-dom": "^5.16.5",
@@ -53,5 +54,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "tailwindcss": "^3.4.4"
   }
 }
